Update image source for Erik Fisher

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <body>
 <div class="container">
   <div class="left">
-    <img src="IMAGE_URL_HERE" alt="Erik Fisher" />
+    <img src="http:/teas-ass.github.io/ERIK_FISHER.JPG" alt="Erik Fisher" />
     <h1>ERIK FISHER</h1>
     <h2>PROFESSIONAL FOOTBALL PLAYER</h2>
 
